// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu tests should match snapshot hidden 1`] = `
<DocumentFragment>
  <button
    aria-controls="id"
    aria-expanded="false"
    aria-haspopup="menu"
    type="button"
  >
    Open
  </button>
  .emotion-13 {
  border: 0;
  padding: 0rem;
  outline: none;
  z-index: 999;
}

.emotion-2 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  font-size: 0.875rem;
  height: 32px;
  width: 100%;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  background-color: transparent;
  color: #323845;
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  text-transform: initial;
}

.emotion-2:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-2:focus {
  outline: none;
  box-shadow: none;
  background-color: rgba(218,227,245,0.32);
}

.emotion-2:hover {
  color: #323845;
  background-color: rgba(202,215,241,0.24);
}

.emotion-2:active {
  color: #1a3470;
  background-color: rgba(186,203,236,0.32);
}

.emotion-2:disabled {
  color: #898F9E;
}

.emotion-2 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 svg {
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  margin-top: 0.25rem;
  padding: 0.75rem;
  min-width: 18px;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: #C4C5CA;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
}

.emotion-12 hr {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-style: solid;
  border-bottom-width: 1px;
  border-top: none;
  border-left: none;
  border-right: none;
  border-color: #C4C5CA;
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

<div
    aria-label="menu label"
    aria-orientation="vertical"
    class="emotion-13"
    data-dialog="true"
    data-testid="menu"
    hidden=""
    id="id"
    role="menu"
    style="display: none;"
    tabindex="-1"
  >
    <div
      class="emotion-12"
      data-testid="menubox"
    >
      <button
        class="emotion-2"
        id="id-1"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
             Download
          </div>
        </div>
      </button>
      <button
        class="emotion-2"
        id="id-2"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
             Link to
          </div>
        </div>
      </button>
      <button
        class="emotion-2"
        id="id-3"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
             Favorite
          </div>
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        id="id-4"
        role="menuitem"
        tabindex="-1"
      />
      <button
        class="emotion-2"
        id="id-5"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
             Delete
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu tests should match snapshot visible 1`] = `
<DocumentFragment>
  <button
    aria-controls="id"
    aria-expanded="true"
    aria-haspopup="menu"
    type="button"
  >
    Open
  </button>
  .emotion-13 {
  border: 0;
  padding: 0rem;
  outline: none;
  z-index: 999;
}

.emotion-2 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  font-size: 0.875rem;
  height: 32px;
  width: 100%;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  background-color: transparent;
  color: #323845;
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  text-transform: initial;
}

.emotion-2:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-2:focus {
  outline: none;
  box-shadow: none;
  background-color: rgba(218,227,245,0.32);
}

.emotion-2:hover {
  color: #323845;
  background-color: rgba(202,215,241,0.24);
}

.emotion-2:active {
  color: #1a3470;
  background-color: rgba(186,203,236,0.32);
}

.emotion-2:disabled {
  color: #898F9E;
}

.emotion-2 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 svg {
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  margin-top: 0.25rem;
  padding: 0.75rem;
  min-width: 18px;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: #C4C5CA;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
}

.emotion-12 hr {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-style: solid;
  border-bottom-width: 1px;
  border-top: none;
  border-left: none;
  border-right: none;
  border-color: #C4C5CA;
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

<div
    aria-label="menu label"
    aria-orientation="vertical"
    class="emotion-13"
    data-dialog="true"
    data-testid="menu"
    id="id"
    role="menu"
    tabindex="-1"
  >
    <div
      class="emotion-12"
      data-testid="menubox"
    >
      <button
        class="emotion-2"
        id="id-1"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
             Download
          </div>
        </div>
      </button>
      <button
        class="emotion-2"
        id="id-2"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
             Link to
          </div>
        </div>
      </button>
      <button
        class="emotion-2"
        id="id-3"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
             Favorite
          </div>
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        id="id-4"
        role="menuitem"
        tabindex="-1"
      />
      <button
        class="emotion-2"
        id="id-5"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
             Delete
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
